--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-amplify/backend": "^1.12.0",
     "@aws-amplify/ui-react": "^6.8.1",
     "aws-amplify": "^6.12.0",
     "next": "15.1.3",
